kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluttercommerce
  labels:
    app: fluttercommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fluttercommerce
  template:
    metadata:
      labels:
        app: fluttercommerce
    spec:
      containers:
        - name: fluttercommerce
          image: giannivanlooij/fluttercommerce:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
